Update warehouse check web config for webservice

--- a/ecci.inv.system/production/Production.Master
+++ b/ecci.inv.system/production/Production.Master
@@ -198,11 +198,11 @@
 <%--          <?php endif; ?>--%>
 
 <%--          <?php if(in_array('createGroup', $user_permission) || in_array('updateGroup', $user_permission) || in_array('viewGroup', $user_permission) || in_array('deleteGroup', $user_permission)): ?>--%>
-            <li id="processNav">
+            <%--<li id="processNav">
               <a href="process.aspx">
                 <i class="glyphicon glyphicon-tags"></i> <span>Process Materials</span>
               </a>
-            </li>
+            </li>--%>
           <li id="processproductNav">
               <a href="approvedrequest.aspx">
                 <i class="glyphicon glyphicon-tags"></i> <span>Process Product</span>
@@ -213,6 +213,11 @@
 
 <%--          <?php if(in_array('createBrand', $user_permission) || in_array('updateBrand', $user_permission) || in_array('viewBrand', $user_permission) || in_array('deleteBrand', $user_permission)): ?>--%>
             <li id="stockNav">
+              <a href="stock.aspx">
+                <i class="glyphicon glyphicon-tags"></i> <span>Store Product</span>
+              </a>
+            </li>
+          <li id="reportNav">
               <a href="#">
                 <i class="glyphicon glyphicon-tags"></i> <span>Reports</span>
               </a>
