--- a/ecci.inv.system/sales/Sales.Master
+++ b/ecci.inv.system/sales/Sales.Master
@@ -118,6 +118,7 @@
         $(document).ready(function () {
             $('.alert-success').hide();
             $('.alert-error').hide();
+            $('.alert-warning').hide();
         });
     </script>
     
