--- a/ecci.inv.system/admin/Superadmin.Master
+++ b/ecci.inv.system/admin/Superadmin.Master
@@ -175,8 +175,8 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li id="createUserNav"><a href="users.aspx"><i class="fa fa-plus"></i>Add Users</a></li>
-                            <li id="manageUserNav"><a href="#"><i class="fa fa-circle-o"></i>Manage Users</a></li>
+                            <li id="createUserNav"><a href="users.aspx"><i class="fa fa-plus"></i>Add User</a></li>
+                            <li id="manageUserNav"><a href="manageusers.aspx"><i class="fa fa-circle-o"></i>Manage Users</a></li>
                         </ul>
                     </li>
                     <li class="treeview" id="mainSupNav">
@@ -212,7 +212,7 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li id="addItemsNav"><a href="items.aspx"><i class="fa fa-plus"></i>Add Items</a></li>
+                            <li id="addItemsNav"><a href="items.aspx"><i class="fa fa-plus"></i>Add Item</a></li>
                             <li id="manageItemsNav"><a href="manageitems.aspx"><i class="fa fa-circle-o"></i>Manage Items</a></li>
                         </ul>
                     </li>
@@ -229,7 +229,7 @@
                             <li id="manageProductsNav"><a href="manageproducts.aspx"><i class="fa fa-circle-o"></i>Manage Products</a></li>
                         </ul>
                     </li>
-                    <li><a href="resetpassword.aspx"><i class="fa fa-user-o"></i><span>Reset Password</span></a></li>
+                    <li id="resetPassNav"><a href="resetpassword.aspx"><i class="fa fa-user-o"></i><span>Reset Password</span></a></li>
                     <li><a href="#"><i class="fa fa-user-o"></i><span>Profile</span></a></li>
 
                     <!-- user permission info -->
