--- a/ecci.inv.system/qualitycontrol/QualityControl.Master
+++ b/ecci.inv.system/qualitycontrol/QualityControl.Master
@@ -136,7 +136,7 @@
     <div class="wrapper">
           <header class="main-header">
             <!-- Logo -->
-            <a href="Dashboard.aspx" class="logo">
+            <a href="#" class="logo">
               <!-- mini logo for sidebar mini 50x50 pixels -->
               <span class="logo-mini"><b>QC</b></span>
               <!-- logo for regular state and mobile devices -->
