--- a/ecci.inv.system/production/Production.Master
+++ b/ecci.inv.system/production/Production.Master
@@ -136,9 +136,9 @@
     <div class="wrapper">
           <header class="main-header">
             <!-- Logo -->
-            <a href="Dashboard.aspx" class="logo">
+            <a href="#" class="logo">
               <!-- mini logo for sidebar mini 50x50 pixels -->
-              <span class="logo-mini"><b>WH</b></span>
+              <span class="logo-mini"><b>PRD</b></span>
               <!-- logo for regular state and mobile devices -->
               <span class="logo-lg"><b>Production</b></span>
             </a>
