--- a/ecci.inv.system/sales/Sales.Master
+++ b/ecci.inv.system/sales/Sales.Master
@@ -137,7 +137,7 @@
     <div class="wrapper">
           <header class="main-header">
             <!-- Logo -->
-            <a href="Dashboard.aspx" class="logo">
+            <a href="#" class="logo">
               <!-- mini logo for sidebar mini 50x50 pixels -->
               <span class="logo-mini"><b>SA</b></span>
               <!-- logo for regular state and mobile devices -->
